--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset=utf-8 />
-  <title> {% if page.title %} {{ page.title }} | {% endif %} John Doe, Photographer </title>
+  <title> {% if page.title %} {{ page.title }} | {% endif %} Adam Spear, an outlet for my geekiness </title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <div id="main">
     <header>
-      <h1> John Doe Photograghy </h1>
+      <h1> Adam Spear's Playground </h1>
     <header>
     <nav role="navigation">
       <ul>
@@ -20,7 +20,7 @@
     </nav>
     {{ content }}
     <footer>
-      <p>@copy; John Doe Photography 2011 | All Rights Reserved. </p>
+      <p>@copy; Adam Sper 2012 | All Rights Reserved. </p>
     </footer>
   </div>
 </body>
