--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     </nav>
     {{ content }}
     <footer>
-      <p>@copy; Adam Sper 2012 | All Rights Reserved. </p>
+      <p>@copy; Adam Spear 2012 | All Rights Reserved. </p>
     </footer>
   </div>
 </body>
