--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset=utf-8 />
   <title> {% if page.title %} {{ page.title }} | {% endif %} Adam Spear, an outlet for my geekiness </title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/example/css/style.css" />
 </head>
 <body>
   <div id="main">
@@ -12,10 +12,10 @@
     <header>
     <nav role="navigation">
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/portfolio/">Portfolio</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/contact">Contact</a></li>
+        <li><a href="/example/">Home</a></li>
+        <li><a href="/example/portfolio/">Portfolio</a></li>
+        <li><a href="/example/about">About</a></li>
+        <li><a href="/example/contact">Contact</a></li>
       </ul>
     </nav>
     {{ content }}
