--- a/_layouts/portfolio_entry.html
+++ b/_layouts/portfolio_entry.html
@@ -2,5 +2,5 @@
 layout: default
 ---
 <h2 class="content">{{page.title}}</h2>
-<img src="a{/example{ page.image }}" />
+<img src="{{ page.image }}" />
 {{ content }}
